2012-06-01 Lorenz Ulrich <lorenz.ulrich@visol.ch>
	* FIX issue #M11276: Enable sorting by single selection
	* Updated documentation for #M11276 and #M18242

2012-05-30 Lorenz Ulrich <lorenz.ulrich@visol.ch>
	* FIX issue #M18489: Fatal error using non existing int() function
	* FIX issue #M8725: Missing microformat classes for email, mobile, fax
	* FIX issue #M7095: Add link wizard to www field
	* FIX issue #M7060: Sorting of address items not working if set in FlexForm (Thanks Uwe Schmelzer)
	* FIX issue #M18391: tt_address cannot be configured using TypoScript anymore (Thanks Gabriel Kaufmann)
	* FIX issue #36351: Name fields modification (first_name, ...) fails for fe_admin_fieldList in "media/scripts/fe_adminLib.inc" (Thanks Andy Grunwald)
	* FIX issue #18140: Trim combinedName after applying the format

2011-08-08 Michael Miousse <mmiousse@infoglobe.ca>
	* ADD added feature #18242, Missing stdWrap on groupSelection
	* FIX fixed issue #16711, Do not limit the size of varchar fields
	* FIX fixed issue #10603, SQL Errors in ext_tables.sql prevent correct installation (tt_address 2.2.1), credits Jochen Rieger

2007-12-23 Ingo Renner	<typo3@ingo-renner.com>

	* ADD added building and room fields
	* ADD added feature #5859, stdWrap on singleSelection
	* ADD added feature #5867, support for up to TT_ADDRESS_MAX_IMAGES images, credits Christian Tauscher
	* ADD added allWrap property for templates
	* CHG now the compatibility function updates the old name field only if the new separated name fields are not empty
	* FIX fixed bug #5861: configure Frontend Plugin: AND / OR allways works as AND
	* UPD updated manual

2007-10-15 Ingo Renner	<typo3@ingo-renner.com>

	!!! moved old TS constants and setup (content.tt_address) into static templates

	* UPD updated manual
	* FIX added image to the fe_admin_fieldList in TCA
	* FIX fixed issue #6448, typo in sorting criteria city
	* ADD added feature #1818, gender field, new marker ###GENDER###